--- a/src/components/gds-media-card/gds-media-card.scss
+++ b/src/components/gds-media-card/gds-media-card.scss
@@ -38,11 +38,6 @@
   @include description;
 }
 
-::slotted(gds-paragraph) {
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
 ::slotted([slot='tags']) {
   display: block;
 
